Optimise float array literals.